# aerial

./: .gitignore  AGENTS.md  AGENT_TESTING_NOTES.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MAINTAINER_HANDOFF.md  README.md  SECURITY.md  index.html
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  homebrew.yml  npm.yml  pages.yml
docs/: AGENT2_DX_HANDOFF.md  INSTALL.md  MCP.md  WAKE_ARCHITECTURE.md
npm/: README.md  package-lock.json  package.json
npm/scripts/: validate-package.mjs
npm/test/: smoke.mjs  worker.mjs
packaging/homebrew/: aerial-local.rb.template  aerial.rb.template
scripts/: installed-e2e.sh  two-agent-smoke.sh
site/: index.html
src/: daemon.rs  envelope.rs  lib.rs  mailbox.rs  main.rs  mcp.rs  protocol.rs  registry.rs  supervisor.rs  transcript.rs
tests/: supervisor.rs  wake.rs
