[package]
name = "aerial"
version = "0.3.0"
edition = "2024"
description = "Peer-to-peer, durable, resumable messaging for AI agents."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1.1.0"

[dev-dependencies]
tempfile = "3.20.0"
